force-app/main/default/objects/Food__c/Food__c.object-meta.xml
<CustomObject>
    <label>Food</label>
    <nameField>
        <label>Food Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>