force-app/main/default/objects/Food__c/fields/Calories_Per_Serving__c.field-meta.xml
<CustomField>
    <fullName>Calories_Per_Serving__c</fullName>
    <label>Calories Per Serving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>