force-app/main/default/objects/Food__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Grouping category for food.</description>
    <inlineHelpText>How would you classify this food?</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Canned</fullName>
            </value>
            <value>
                <fullName>Dried</fullName>
            </value>
            <value>
                <fullName>Packaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>