force-app/main/default/objects/Food__c/fields/Serving_Size_Weight__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size_Weight__c</fullName>
    <label>Serving Size Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ounces</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
            <value>
                <fullName>Teaspoons</fullName>
            </value>
            <value>
                <fullName>Tablespoons</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Fluid Ounces</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Pints</fullName>
            </value>
            <value>
                <fullName>Quarts</fullName>
            </value>
            <value>
                <fullName>Milliliters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>