force-app/main/default/objects/Food__c/fields/Shelf_Life_Days__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Days__c</fullName>
    <inlineHelpText>The number of days can shit on a shelf before it expires.</inlineHelpText>
    <label>Shelf Life (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>