force-app/main/default/objects/Food__c/fields/Single_Serving_Size__c.field-meta.xml
<CustomField>
    <fullName>Single_Serving_Size__c</fullName>
    <inlineHelpText>How much does a single serving of this food weigh?</inlineHelpText>
    <label>Single Serving Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>